# rust-lambda-datafusion

./: Cargo.toml  LICENSE  Makefile  README.md
src/: configuration.rs  dataproc.rs  event_handler.rs  main.rs  metrics.rs
terraform/: iam.tf  lambda.tf  main.tf  policy-iam.json  s3_bucket.tf  terraform.tfstate  terraform.tfstate.backup  test.variables.tfvars  variables.tf
