[package]
name = "lambda-datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }
aws-sdk-cloudwatch = "1.1.0"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-s3 = "1.76.0"
aws-config = "1.5.16"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
datafusion = "45.0.0"
object_store = { version = "0.11.2", features = ["aws"] }
url = "2.5.4"
tokio-retry = "0.3"
